--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="jumbotron jumbotron-fluid mx-auto">
   <div class="container">
     <h1 class="display-4">Check you students data</h1>
-    <p class="lead">let search your students data :))</p>
+    <p class="lead">let search your students data :)</p>
   </div>
 </div>
 <div class="row">
